--- a/crm/templates/crm/dashboard.html
+++ b/crm/templates/crm/dashboard.html
@@ -19,5 +19,6 @@
     <a href="{% url 'crm-excursion-list' %}" class="btn">🗺 Экскурсии</a>
     <a href="{% url 'crm-ticket-list' %}" class="btn">📦 Заказы билетов</a>
     <a href="{% url 'crm-user-list' %}" class="btn">👤 Пользователи</a>
+    <a href="{% url 'crm-excursion-slot-list' %}" class="btn">📅 Слоты экскурсий</a>
   </div>
 {% endblock %}
